--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json --host 0.0.0.0",
+    "start": "ng serve --proxy-config proxy-conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,35 +13,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@types/jwt-decode": "^2.2.1",
-    "bootstrap": "^3.3.7",
-    "bootstrap-sass": "^3.3.7",
-    "classlist.js": "^1.1.20150312",
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
+    "@angular/core": "^4.2.4",
+    "@angular/forms": "^4.2.4",
+    "@angular/http": "^4.2.4",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-browser-dynamic": "^4.2.4",
+    "@angular/router": "^4.2.4",
+    "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.1",
-    "intl": "^1.2.5",
-    "jquery": "^3.2.1",
-    "jwt-decode": "^2.2.0",
+    "ngx-bootstrap": "^1.9.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.4",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/cli": "1.4.9",
+    "@angular/compiler-cli": "^4.2.4",
+    "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "angular-ide": "^0.9.31",
-    "codelyzer": "~3.1.1",
+    "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -50,13 +44,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass": "^4.5.3",
     "protractor": "~5.1.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.6",
-    "sw-precache": "^5.2.0",
     "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "^2.4.2"
+    "tslint": "~5.7.0",
+    "typescript": "~2.3.3"
   }
 }
