--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost/shop
-spring.datasource.username=master
-spring.datasource.password=
+spring.datasource.username=root
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create-drop
 #l
 #spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.h2geodb.GeoDBDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql=true
-spring.datasource.platform=geodb
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.type=TRACE
